<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/detailLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_detail_left"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/arrows"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detailRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:gravity="end"
        android:text="@string/car_detail_right"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailLeft" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_favourite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:text="@string/favourite"
            android:textSize="15sp"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/button_rent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:text="@string/rent"
            android:textSize="15sp"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/button_info"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:text="@string/detail"
            android:textSize="15sp"
            android:textColor="@color/button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/arrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/arrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:tint="@color/button_text"
            app:srcCompat="@drawable/arrow_left" />

        <ImageView
            android:id="@+id/arrowRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:tint="@color/button_text"
            app:srcCompat="@drawable/right_arrow" />

    </LinearLayout>

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_marginBottom="430dp"
        android:layout_marginStart="60sp"
        app:srcCompat="@drawable/bmw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/icon_favourite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:tint="@color/light_grey"
        app:srcCompat="@drawable/heart"
        app:layout_constraintEnd_toEndOf="@+id/carImage"
        app:layout_constraintTop_toTopOf="@+id/carImage"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="4.5"
        app:layout_constraintTop_toBottomOf="@+id/detailLeft"
        app:layout_constraintStart_toStartOf="parent"/>

    <Switch
        android:id="@+id/switch_darkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/carImage"
        app:layout_constraintStart_toStartOf="@id/carImage">

        <SearchView
            android:id="@+id/searchBox"
            android:layout_width="240dp"
            android:layout_height="50dp"/>

        <Spinner
            android:id="@+id/sortMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>